data/forge_javadoc/1.9.4/raw/net/minecraft/block/BlockSilverfish.md
---
title: "BlockSilverfish"
description: "public class BlockSilverfish extends Block"
package: "net/minecraft/block"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/block/BlockSilverfish.html"
sourceType: javadoc
---

# BlockSilverfish

**Inheritance:** java.lang.Object → net.minecraftforge.fml.common.registry.IForgeRegistryEntry.Impl<Block> → net.minecraft.block.Block → net.minecraft.block.BlockSilverfish

## Class signature

```java
public class BlockSilverfish extends Block
```

## Constructors

- `BlockSilverfish()`

## Methods

- `static boolean canContainSilverfish(IBlockState blockState)`
- `protected BlockStateContainer createBlockState()`
- `protected ItemStack createStackedBlock(IBlockState state)`
- `void dropBlockAsItemWithChance(World worldIn, BlockPos pos, IBlockState state, float chance, int fortune)`
- `ItemStack getItem(World worldIn, BlockPos pos, IBlockState state)`
- `int getMetaFromState(IBlockState state)`
- `IBlockState getStateFromMeta(int meta)`
- `void getSubBlocks(Item itemIn, CreativeTabs tab, java.util.List<ItemStack> list)`
- `int quantityDropped(java.util.Random random)`

## Fields

- `static PropertyEnum<BlockSilverfish.EnumType> VARIANT`
