data/forge_javadoc/1.12.2/raw/net/minecraft/block/BlockSilverfish.md
---
title: "BlockSilverfish"
description: "public class BlockSilverfish extends Block"
package: "net/minecraft/block"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraft/block/BlockSilverfish.html"
sourceType: javadoc
---

# BlockSilverfish

**Inheritance:** java.lang.Object → net.minecraftforge.registries.IForgeRegistryEntry.Impl<Block> → net.minecraft.block.Block → net.minecraft.block.BlockSilverfish

## Class signature

```java
public class BlockSilverfish extends Block
```

## Constructors

- `BlockSilverfish()`

## Methods

- `static boolean canContainSilverfish(IBlockState blockState)`
- `protected BlockStateContainer createBlockState()`
- `void dropBlockAsItemWithChance(World worldIn, BlockPos pos, IBlockState state, float chance, int fortune)`
- `ItemStack getItem(World worldIn, BlockPos pos, IBlockState state)`
- `int getMetaFromState(IBlockState state)`
- `protected ItemStack getSilkTouchDrop(IBlockState state)`
- `IBlockState getStateFromMeta(int meta)`
- `void getSubBlocks(CreativeTabs itemIn, NonNullList<ItemStack> items)`
- `int quantityDropped(java.util.Random random)`

## Fields

- `static PropertyEnum<BlockSilverfish.EnumType> VARIANT`
